added: working email submit, fixed: minor tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
             type="email"
             name="email"
             placeholder="Get Notified via Email"
+            required
           />
           <button id="submit-btn">Submit</button>
         </form>
